--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -57,37 +57,65 @@
     }
   }
 
-  // Set the width of the columns
+  // Set the width of the columns for different layouts
+  // Two columns
   .col-1-of-2 {
     width: calc((100% - #{$gutter-horizontal}) / 2);
   }
 
+  // Three columns
   .col-1-of-3 {
     width: calc((100% - 2 * #{$gutter-horizontal}) / 3);
   }
 
+  // 1/3 + 2/3 columns
   .col-2-of-3 {
     width: calc(2 * ((100% - 2 * #{$gutter-horizontal}) / 3) + #{$gutter-horizontal});
   }
 
+  // Four columns
   .col-1-of-4 {
     width: calc((100% - 3 * #{$gutter-horizontal}) / 4);
   }
 
+  // 1/2 + 1/4 + 1/4 columns
   .col-2-of-4 {
     width: calc(2 * ((100% - 3 * #{$gutter-horizontal}) / 4) + #{$gutter-horizontal});
   }
 
+  // 3/4 + 1/4 columns
   .col-3-of-4 {
     width: calc(3 * ((100% - 3 * #{$gutter-horizontal}) / 4) + (2 * (#{$gutter-horizontal})));
   }
 }
 
+// limit the width of the row in the features and tours sections
 .section-features,
 .section-tours {
   .row {
     @include respond(tablet-portrait-2) {
       max-width: 50rem;
+    }
+  }
+}
+
+// ** IMPORTANT **
+// Override the column widths for the features section to create a grid layout of 2 by 2
+.section-features {
+  .row {
+    @include respond(laptop) {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr); // Two equal-width columns
+      grid-gap: 4rem; // Add spacing between boxes
+
+      @include respond(tablet-portrait-2) {
+        grid-template-columns: 1fr; // Switch to single-column layout for smaller screens
+        grid-gap: 0;
+      }
+
+      [class^="col-"] {
+        width: 100%
+      }
     }
   }
 }
